# Corewar_T4

./: corewar.h  get_next_line.h  main.c  names  test.c  vm.c
Parsing_Ernest/: ._Makefile  ._acb_work.c  ._check.c  ._check_type.c  ._core_checks.c  ._file_read.c  ._functions.c  ._get_next_line.c  ._h.cor  ._h.s  ._inits.c  ._messages.c  ._name_comment.c  ._parse.c  ._set.c  ._str_checks.c  ._transform.c  Makefile  asm  check.c  check_type.c  core_checks.c  ext.s  file_read.c  functions.c  get_next_line.c  h.cor  h.s  main.c  messages.c  name_comment.c  parse.c  set.c  str_checks.c  transform.c
champions/: intra.cor  intra.s
champions/tests/: .nfs.2005106e.7891  .nfs.200510ba.1f1b  .nfs.200510d2.3382  add.cor  fork.cor  fork.s  ld.cor  ldi.cor  ldi.s  neo.cor  neo.s  or.cor  st.cor  st.s  sti.cor  sti.s
libft/: Makefile  ft_memmove.c  ft_split_whitespaces.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strsplit.c
libft/includes/: libft.h
vm/: CMakeLists.txt  Makefile  a.out  corewar  main.c  main2.c  vm.c
